# reelmatrix

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  DEMO.md  DESIGN.md  Dockerfile.api  Dockerfile.web  LOOP.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
.testsprite/plans/: brand-import-validation.plan.json  campaign-kanban-board.plan.json  command-palette-navigation.plan.json  homepage-smoke.plan.json  (+36 more)
configs/: settings.py
core/: __init__.py  notify.py
docs/: README.md  architecture-enterprise-loop.md  deploy-aliyun.md  deployment-onprem.md  integration-s2s-events.md  phase2.1.md  phase2.2.md  phase2.3.md  reelmatrix_事件驱动工作流.md  reelmatrix_创业方案.md  reelmatrix_架构_workflow_agent_mcp.md  reelmatrix_记忆_skill_tool管理.md  roadmap-growth-engine.md  roadmap-maturity.md  team-handbook.md
scripts/: demo_prep.py
tests/: conftest.py  test_agents.py  test_analytics.py  test_api.py  test_atoms.py  test_brand.py  test_campaign_instantiation.py  test_campaign_workflow.py  test_consistency.py  test_db_engine.py  test_enterprise_loop.py  test_eval.py  test_growth.py  test_ideation_bot.py  test_insight.py  test_integrations.py  test_llm_factory.py  test_media.py  test_models.py  test_onboarding.py  test_openai_client.py  test_planning_bot.py  test_platform_specs.py  test_privacy.py  test_publish.py  test_quality_loop.py  test_qwen_client.py  test_scheduler.py  test_schemas.py  test_scoring.py  test_seed.py  test_strategy.py  test_task_runner.py  test_team_api.py  test_terminology.py  test_trends.py
(+227 files in other folders)
